# Th3rd

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements 2.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  supa.py
backend/app/routers/: collection.py  health.py  product.py
backend/tests/: test_health.py
docs/: backend-instructions.md
frontend/: .env.local.example  package-lock.json  package.json  sanity.cli.ts  sanity.config.ts  skills-lock.json  tsconfig.tsbuildinfo
frontend/.claude/skills/frontend-skill/: SKILL.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/collections/: page.tsx
frontend/app/collections/[handle]/: page.tsx
frontend/app/new-arrivals/: page.tsx
frontend/app/products/[id]/: page.tsx
frontend/app/studio/[[...tool]]/: layout.tsx  page.tsx
frontend/components/: AboutHero.tsx  AboutStory.tsx  AboutVisual.tsx  BrandStory.tsx  CollectionCard.tsx  CollectionLayout.tsx  CollectionsGrid.tsx  Counter.tsx  FeaturedProducts.tsx  Footer.tsx  HeroSection.tsx  Marquee.tsx  Navigation.tsx  NewsletterSection.tsx  PageHeader.tsx  ProductCard.tsx  ProductView.tsx  Reveal.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/lib/: data.ts  motion.ts  types.ts
frontend/sanity/: client.ts  env.ts  image.ts  queries.ts  seed.ndjson
frontend/sanity/schemaTypes/: index.ts
frontend/sanity/schemaTypes/documents/: collection.ts  product.ts
frontend/sanity/schemaTypes/objects/: colorOption.ts  layoutSections.ts  (+1 more)
